--- a/AndroidStudioProject/app/src/main/res/values/strings.xml
+++ b/AndroidStudioProject/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
-    <color name="colorRed">#ff0000</color>
-    <color name="colorBlue">#0000ff</color>
-    <color name="colorGreen">#00ff00</color>
-    <color name="colorBlack">#000000</color>
+    <string name="app_name">Color Coder</string>
+    <string name="textView1_text">#E0BBE4</string>
+    <string name="textView2_text">#80E2FF</string>
 </resources>
